# sensor_transposition

./: .gitignore  README.md  TODO.md  pyproject.toml  todo.md  todo_review.md  todo_slam.md  todo_useability.md
docs/: camera_intrinsics_guide.md  camera_lidar_extrinsic_calibration.md  fisheye_camera_intrinsics_guide.md  gps_data_collection.md  gps_fusion.md  ground_plane_identification.md  lidar_data_collection.md  lidar_motion_distortion.md  lidar_synchronization.md  loop_closure.md  occupancy_grid.md  point_cloud_map.md  pose_graph_optimisation.md  radar_data_collection.md  radar_odometry.md  rosbag.md  rtk_gps_setup.md  sliding_window.md  state_estimation.md  submap_manager.md  visual_odometry.md  visualisation.md  voxel_map.md  wheel_odometry.md
examples/: sensor_collection.yaml  slam_pipeline.py
experiment-1/: README.md  generate_samples.py  parse_sensor_data.py
sensor_transposition/: __init__.py  calibration.py  camera_intrinsics.py  exceptions.py  feature_detection.py  frame_pose.py  ground_plane.py  lidar_camera.py  loop_closure.py  occupancy_grid.py  point_cloud_map.py  pose_graph.py  rosbag.py  sensor_collection.py  slam_session.py  sliding_window.py  stereo.py  submap_manager.py  sync.py  transform.py  visual_odometry.py  visualisation.py  voxel_map.py  wheel_odometry.py
sensor_transposition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_calibration.py  test_camera_intrinsics.py  test_exceptions.py  test_feature_detection.py  test_frame_pose.py  test_ground_plane.py  test_lidar_camera.py  test_loop_closure.py  test_sync.py  (+14 more)
(+62 files in other folders)
